Trying to prevent white appearing at end of scroll on mobile

--- a/src/components/App.less
+++ b/src/components/App.less
@@ -1,8 +1,13 @@
+html {
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
   margin: 0px;
   font-family: 'Josefin Sans', sans-serif;
-  height: 100vh;
-  overflow: hidden;
+  height: 100%;
+  overflow: auto;
 }
 
 .App {
